--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
   "author": "JGQH",
   "license": "ISC",
   "devDependencies": {
+    "@types/cheerio": "^0.22.30",
     "@vercel/node": "^1.12.1",
     "typescript": "^4.4.2"
+  },
+  "dependencies": {
+    "axios": "^0.21.1",
+    "cheerio": "^1.0.0-rc.10"
   }
 }
